---------------------
subunit release notes
---------------------

NEXT (In development)
---------------------

0.0.13
------

IMPROVEMENTS
~~~~~~~~~~~~

* subunit should now build with automake 1.11 again. (Robert Collins)

* `subunit-stats` no longer outputs encapsulated stdout as subunit.
  (Robert Collins, #1171987)

* The logic for `subunit.run` is now importable via python -
  `subunit.run.main`. (Robert Collins, #606770)

BUG FIXES
~~~~~~~~~

* Removed GPL files that were (C) non Subunit Developers - they are
  incompatible for binary distribution, which affects redistributors.
  (Robert Collins, #1185591)

0.0.12
------

BUG FIXES
~~~~~~~~~

* Subunit v2 packets with both file content and route code were not being
  parsed correctly - they would incorrectly emit a parser error, due to trying
  to parse the route code length from the first byes of the file content.
  (Robert Collins, 1172815)

0.0.11
------

v2 protocol draft included in this release. The v2 protocol trades off human
readability for a massive improvement in robustness, the ability to represent
concurrent tests in a single stream, cheaper parsing, and that provides
significantly better in-line debugging support and structured forwarding
of non-test data (such as stdout or stdin data).

This change includes two new filters (subunit-1to2 and subunit-2to1). Use
these filters to convert old streams to v2 and convert v2 streams to v1.

All the other filters now only parse and emit v2 streams. V2 is still in
draft format, so if you want to delay and wait for v2 to be finalised, you
should use subunit-2to1 before any serialisation steps take place.
With the ability to encapsulate multiple non-test streams, another significant
cange is that filters which emit subunit now encapsulate any non-subunit they
encounter, labelling it 'stdout'. This permits multiplexing such streams and
detangling the stdout streams from each input.

The subunit libraries (Python etc) have not changed their behaviour: they